--- a/index.html
+++ b/index.html
@@ -2,81 +2,250 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Minecraft CurseForge</title>
+  <title>What's Been Happening at Minecraft CurseForge</title>
 
   <link rel="stylesheet" href="css/fontello-embedded.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="main.css">
+
 </head>
 <body>
-  <div class="email">
-    <small class="pre-header">SnowShock35, Here's what's been going on lately with <a href="#">Minecraft CurseForge</a>:</small>
-    <div class="email-container">
-      <header class="header">
-        <div class="logo-container">
-          <a href="https://minecraft.curseforge.com/">
-            <h1>Minecraft CurseForge</h1>
-          </a>
+  <div id="email">
+    <div class="container">
+      <div id="preheader" class="cf">
+        <div class="right">
+          <img src="anvil.svg" alt="CurseForge">
         </div>
-      </header>
-      <div class="nav-container">
-        <div class="container">
-          <nav class="nav">
-            <ul>
-              <li><a href="https://minecraft.curseforge.com/projects/">Projects</a></li>
-              <li><a href="https://minecraft.curseforge.com/forums/">Forums</a></li>
-              <li><a href="https://curseforge.com/store/">Reward Store</a></li>
-              <li><a href="https://minecraft.curseforge.com/dashboard/">Dashboard</a></li>
-            </ul>
-            <a href="https://minecraft.curseforge.com/" class="to-site">Visit Minecraft CurseForge</a>
-          </nav>
+        <div class="left">
+          <small>SnowShock35,
+Here's what's been going on lately with <a href="https://minecraft.curseforge.com">Minecraft CurseForge</a>:</small>
         </div>
       </div>
-      <article class="content">
-        <h2 class="date">March 17th</h2>
-        <h3>New Files Added to Followed Projects. . .</h3>
-        <ul class="notifications">
-          <li class="project-list-item">
-            <div class="avatar">
-              <img src="https://placehold.it/64" alt="IMG">
-            </div>
-            <div class="details">
-              <p class="name">Project Name</p>
-              <p class="author">by <a href="#">Author Name</a></p>
-            </div>
-          </li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
-      </article>
-      <footer class="footer">
-        <div class="container">
-          <div class="top">
-            <a href="https://curse.com" class="curse">Curse</a>
-            <ul class="social">
-              <li><a class="icon-facebook" href="#">Facebook</a></li>
-              <li><a class="icon-twitter" href="#">Twitter</a></li>
-              <li><a class="icon-youtube-play" href="#">YouTube</a></li>
-              <li><a class="icon-email" href="#">Newsletter</a></li>
-            </ul>
-          </div>
-          <ul class="links">
-            <li><a href="#">My Account</a></li>
-            <li><a href="#">Premium</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Help</a></li>
-            <li><a href="#">About Curse</a></li>
-            <li><a href="#">Advertise</a></li>
-            <li><a href="#">Terms of Service</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-          </ul>
-          <span class="copyright">Copyright 2005-2017, Curse Inc.</span>
+      <div id="head">
+        <div class="logo-container">
+          <a href="https://minecraft.curseforge.com"><h1 class="title">Minecraft CurseForge</h1></a>
         </div>
-      </footer>
-
+      </div>
+      <div id="body">
+        <div class="newsletter">
+          <div class="wrapper">
+            <h2 class="date">March 19th</h2>
+            <h3 class="summary">New Files Added to Following Projects...</h3>
+            <div class="table-container cf">
+              <table class="main-table">
+                <tr>
+                  <th rowspan="2"><img src="https://placehold.it/96" alt="" /></th>
+                  <th style="text-align:left;vertical-align:bottom;">There are new files in <a href="#">Obscurity</a></th>
+                </tr>
+                <tr>
+                  <td style="text-align:left;vertical-align:top;">New files have been added to project: <strong>Obscurity</strong></td>
+                </tr>
+                <tr>
+                  <th rowspan="2"><img src="https://placehold.it/96" alt="" /></th>
+                  <th style="text-align:left;vertical-align:bottom;">There are new files in <a href="#">Obscurity</a></th>
+                </tr>
+                <tr>
+                  <td style="text-align:left;vertical-align:top;">New files have been added to project: <strong>Obscurity</strong></td>
+                </tr>
+                <tr>
+                  <th rowspan="2"><img src="https://placehold.it/96" alt="" /></th>
+                  <th style="text-align:left;vertical-align:bottom;">There are new files in <a href="#">Obscurity</a></th>
+                </tr>
+                <tr>
+                  <td style="text-align:left;vertical-align:top;">New files have been added to project: <strong>Obscurity</strong></td>
+                </tr>
+                <tr>
+                  <th rowspan="2"><img src="https://placehold.it/96" alt="" /></th>
+                  <th style="text-align:left;vertical-align:bottom;">There are new files in <a href="#">Obscurity</a></th>
+                </tr>
+                <tr>
+                  <td style="text-align:left;vertical-align:top;">New files have been added to project: <strong>Obscurity</strong></td>
+                </tr>
+                <tr>
+                  <th rowspan="2"><img src="https://placehold.it/96" alt="" /></th>
+                  <th style="text-align:left;vertical-align:bottom;">There are new files in <a href="#">Obscurity</a></th>
+                </tr>
+                <tr>
+                  <td style="text-align:left;vertical-align:top;">New files have been added to project: <strong>Obscurity</strong></td>
+                </tr>
+                <tr>
+                  <th rowspan="2"><img src="https://placehold.it/96" alt="" /></th>
+                  <th style="text-align:left;vertical-align:bottom;">There are new files in <a href="#">Obscurity</a></th>
+                </tr>
+                <tr>
+                  <td style="text-align:left;vertical-align:top;">New files have been added to project: <strong>Obscurity</strong></td>
+                </tr>
+              </table>
+              <table class="main-table">
+                <tr>
+                  <th rowspan="2"><img src="https://placehold.it/96" alt="" /></th>
+                  <th style="text-align:left;vertical-align:bottom;">There are new files in <a href="#">Obscurity</a></th>
+                </tr>
+                <tr>
+                  <td style="text-align:left;vertical-align:top;">New files have been added to project: <strong>Obscurity</strong></td>
+                </tr>
+                <tr>
+                  <th rowspan="2"><img src="https://placehold.it/96" alt="" /></th>
+                  <th style="text-align:left;vertical-align:bottom;">There are new files in <a href="#">Obscurity</a></th>
+                </tr>
+                <tr>
+                  <td style="text-align:left;vertical-align:top;">New files have been added to project: <strong>Obscurity</strong></td>
+                </tr>
+                <tr>
+                  <th rowspan="2"><img src="https://placehold.it/96" alt="" /></th>
+                  <th style="text-align:left;vertical-align:bottom;">There are new files in <a href="#">Obscurity</a></th>
+                </tr>
+                <tr>
+                  <td style="text-align:left;vertical-align:top;">New files have been added to project: <strong>Obscurity</strong></td>
+                </tr>
+                <tr>
+                  <th rowspan="2"><img src="https://placehold.it/96" alt="" /></th>
+                  <th style="text-align:left;vertical-align:bottom;">There are new files in <a href="#">Obscurity</a></th>
+                </tr>
+                <tr>
+                  <td style="text-align:left;vertical-align:top;">New files have been added to project: <strong>Obscurity</strong></td>
+                </tr>
+                <tr>
+                  <th rowspan="2"><img src="https://placehold.it/96" alt="" /></th>
+                  <th style="text-align:left;vertical-align:bottom;">There are new files in <a href="#">Obscurity</a></th>
+                </tr>
+                <tr>
+                  <td style="text-align:left;vertical-align:top;">New files have been added to project: <strong>Obscurity</strong></td>
+                </tr>
+                <tr>
+                  <th rowspan="2"><img src="https://placehold.it/96" alt="" /></th>
+                  <th style="text-align:left;vertical-align:bottom;">There are new files in <a href="#">Obscurity</a></th>
+                </tr>
+                <tr>
+                  <td style="text-align:left;vertical-align:top;">New files have been added to project: <strong>Obscurity</strong></td>
+                </tr>
+              </table>
+            </div>
+            <hr>
+            <h2 class="date">March 18th</h2>
+            <h3 class="summary">New Files Added to Following Projects...</h3>
+            <div class="table-container cf">
+              <table class="main-table">
+                <tr>
+                  <th rowspan="2"><img src="https://placehold.it/96" alt="" /></th>
+                  <th style="text-align:left;vertical-align:bottom;">There are new files in <a href="#">Obscurity</a></th>
+                </tr>
+                <tr>
+                  <td style="text-align:left;vertical-align:top;">New files have been added to project: <strong>Obscurity</strong></td>
+                </tr>
+                <tr>
+                  <th rowspan="2"><img src="https://placehold.it/96" alt="" /></th>
+                  <th style="text-align:left;vertical-align:bottom;">There are new files in <a href="#">Obscurity</a></th>
+                </tr>
+                <tr>
+                  <td style="text-align:left;vertical-align:top;">New files have been added to project: <strong>Obscurity</strong></td>
+                </tr>
+                <tr>
+                  <th rowspan="2"><img src="https://placehold.it/96" alt="" /></th>
+                  <th style="text-align:left;vertical-align:bottom;">There are new files in <a href="#">Obscurity</a></th>
+                </tr>
+                <tr>
+                  <td style="text-align:left;vertical-align:top;">New files have been added to project: <strong>Obscurity</strong></td>
+                </tr>
+                <tr>
+                  <th rowspan="2"><img src="https://placehold.it/96" alt="" /></th>
+                  <th style="text-align:left;vertical-align:bottom;">There are new files in <a href="#">Obscurity</a></th>
+                </tr>
+                <tr>
+                  <td style="text-align:left;vertical-align:top;">New files have been added to project: <strong>Obscurity</strong></td>
+                </tr>
+                <tr>
+                  <th rowspan="2"><img src="https://placehold.it/96" alt="" /></th>
+                  <th style="text-align:left;vertical-align:bottom;">There are new files in <a href="#">Obscurity</a></th>
+                </tr>
+                <tr>
+                  <td style="text-align:left;vertical-align:top;">New files have been added to project: <strong>Obscurity</strong></td>
+                </tr>
+                <tr>
+                  <th rowspan="2"><img src="https://placehold.it/96" alt="" /></th>
+                  <th style="text-align:left;vertical-align:bottom;">There are new files in <a href="#">Obscurity</a></th>
+                </tr>
+                <tr>
+                  <td style="text-align:left;vertical-align:top;">New files have been added to project: <strong>Obscurity</strong></td>
+                </tr>
+              </table>
+              <table class="main-table">
+                <tr>
+                  <th rowspan="2"><img src="https://placehold.it/96" alt="" /></th>
+                  <th style="text-align:left;vertical-align:bottom;">There are new files in <a href="#">Obscurity</a></th>
+                </tr>
+                <tr>
+                  <td style="text-align:left;vertical-align:top;">New files have been added to project: <strong>Obscurity</strong></td>
+                </tr>
+                <tr>
+                  <th rowspan="2"><img src="https://placehold.it/96" alt="" /></th>
+                  <th style="text-align:left;vertical-align:bottom;">There are new files in <a href="#">Obscurity</a></th>
+                </tr>
+                <tr>
+                  <td style="text-align:left;vertical-align:top;">New files have been added to project: <strong>Obscurity</strong></td>
+                </tr>
+                <tr>
+                  <th rowspan="2"><img src="https://placehold.it/96" alt="" /></th>
+                  <th style="text-align:left;vertical-align:bottom;">There are new files in <a href="#">Obscurity</a></th>
+                </tr>
+                <tr>
+                  <td style="text-align:left;vertical-align:top;">New files have been added to project: <strong>Obscurity</strong></td>
+                </tr>
+                <tr>
+                  <th rowspan="2"><img src="https://placehold.it/96" alt="" /></th>
+                  <th style="text-align:left;vertical-align:bottom;">There are new files in <a href="#">Obscurity</a></th>
+                </tr>
+                <tr>
+                  <td style="text-align:left;vertical-align:top;">New files have been added to project: <strong>Obscurity</strong></td>
+                </tr>
+                <tr>
+                  <th rowspan="2"><img src="https://placehold.it/96" alt="" /></th>
+                  <th style="text-align:left;vertical-align:bottom;">There are new files in <a href="#">Obscurity</a></th>
+                </tr>
+                <tr>
+                  <td style="text-align:left;vertical-align:top;">New files have been added to project: <strong>Obscurity</strong></td>
+                </tr>
+                <tr>
+                  <th rowspan="2"><img src="https://placehold.it/96" alt="" /></th>
+                  <th style="text-align:left;vertical-align:bottom;">There are new files in <a href="#">Obscurity</a></th>
+                </tr>
+                <tr>
+                  <td style="text-align:left;vertical-align:top;">New files have been added to project: <strong>Obscurity</strong></td>
+                </tr>
+              </table>
+            </div>
+          </div>
+        </div>
+        <div class="cta">
+          <a href="https://minecraft.curseforge.com/my-notifications" class="btn"><span>See All Notifications</span></a>
+        </div>
+      </div>
+      <div id="footer">
+        <div class="top">
+          <a href="https://curse.com" class="curse">Curse</a>
+          <ul class="social">
+            <li><a class="icon-facebook" href="#">Facebook</a></li>
+            <span>|</span>
+            <li><a class="icon-twitter" href="#">Twitter</a></li>
+            <span>|</span>
+            <li><a class="icon-youtube-play" href="#">YouTube</a></li>
+            <span>|</span>
+            <li><a class="icon-email" href="#">Newsletter</a></li>
+          </ul>
+        </div>
+        <ul class="links">
+          <li><a href="#">My Account</a></li>
+          <li><a href="#">Premium</a></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">Help</a></li>
+          <li><a href="#">About Curse</a></li>
+          <li><a href="#">Advertise</a></li>
+          <li><a href="#">Terms of Service</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+        </ul>
+        <span class="copyright">Copyright 2005-2017, Curse Inc.</span>
+      </div>
     </div>
   </div>
 </body>
